# bluesjackrabbit

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
client/: BulletRenderer.cpp  BulletRenderer.h  CMakeLists.txt  CharacterRenderer.cpp  CharacterRenderer.h  Clickeable.h  Constants.h  Event.cpp  Event.h  EventBus.cpp  EventBus.h  FloorRenderer.cpp  FloorRenderer.h  GameObject.cpp  GameObject.h  GameObjectProxy.cpp  GameObjectProxy.h  GreenTurtleRenderer.cpp  GreenTurtleRenderer.h  InitialScreen.cpp  InitialScreen.h  LivesRenderer.cpp  LivesRenderer.h  LocalServerProxy.cpp  LocalServerProxy.h  Lock.h  MainWindow.cpp  MainWindow.h  MapComboBox.cpp  MapComboBox.h  MeCharacterRenderer.cpp  MeCharacterRenderer.h  Mutex.cpp  Mutex.h  NewGameScreen.cpp  NewGameScreen.h  NewLifeRenderer.cpp  NewLifeRenderer.h  OtherCharacterRenderer.cpp  OtherCharacterRenderer.h  (+33 more)
client/static/: connect.glade  join_game.glade  new_game.glade
cmake_modules/: CppLint.cmake
common/: CMakeLists.txt  Configuration.cpp  Configuration.h  Constants.h  CreateGameMessage.cpp  CreateGameMessage.h  DirectoryException.cpp  DirectoryException.h  DirectoryReader.cpp  DirectoryReader.h  GameFinishedMessage.cpp  GameFinishedMessage.h  GameInitMessage.cpp  GameInitMessage.h  GameObjectMessage.cpp  GameObjectMessage.h  GamesMessage.cpp  GamesMessage.h  InvalidMessageException.cpp  InvalidMessageException.h  JoinGameMessage.cpp  JoinGameMessage.h  LevelFinishedMessage.cpp  LevelFinishedMessage.h  Lock.cpp  Lock.h  Logger.cpp  Logger.h  LoggerScope.cpp  LoggerScope.h  MapLoader.cpp  MapLoader.h  MapsMessage.cpp  MapsMessage.h  Message.cpp  Message.h  MessageReader.cpp  MessageReader.h  MessageWriter.cpp  MessageWriter.h  (+10 more)
editor/: BreakableRectButton.cpp  BreakableRectButton.h  BreakableRectItem.cpp  BreakableRectItem.h  CMakeLists.txt  CanvasItem.h  CircleButton.cpp  CircleButton.h  CircleItem.cpp  CircleItem.h  CircleLevelObject.cpp  CircleLevelObject.h  ControlItem.cpp  ControlItem.h  ControlToolButton.cpp  ControlToolButton.h  CustomToolButton.cpp  CustomToolButton.h  Editor.cpp  Editor.h  EditorCanvas.cpp  EditorCanvas.h  EditorController.cpp  EditorController.h  EditorLayer.h  EditorWindow.cpp  EditorWindow.h  GenericImageLevelObject.cpp  GenericImageLevelObject.h  GoalButton.cpp  GoalButton.h  GoalItem.cpp  GoalItem.h  GoalLevelObject.cpp  GoalLevelObject.h  ImageItem.cpp  ImageItem.h  Level.cpp  Level.h  LevelLoader.cpp  (+28 more)
engine/: Body.h  CMakeLists.txt  CircleCollider.cpp  CircleCollider.h  Collider.cpp  Collider.h  CollisionsHelper.cpp  CollisionsHelper.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  GameObjectBullet.cpp  GameObjectBullet.h  GameObjectFloor.cpp  GameObjectFloor.h  GameObjectGoal.cpp  GameObjectGoal.h  GameObjectGreenTurtle.cpp  GameObjectGreenTurtle.h  GameObjectNewLife.cpp  GameObjectNewLife.h  GameObjectPlayer.cpp  GameObjectPlayer.h  GameObjectRedTurtle.cpp  GameObjectRedTurtle.h  GameObjectTemplate.cpp  GameObjectTemplate.h  GameObjectWall.cpp  GameObjectWall.h  Line.cpp  Line.h  PolygonCollider.cpp  PolygonCollider.h  RectangleCollider.cpp  RectangleCollider.h  RigidBody.cpp  RigidBody.h  StaticBody.cpp  StaticBody.h  (+4 more)
server/: AcceptorThread.cpp  AcceptorThread.h  CMakeLists.txt  ClientProxy.cpp  ClientProxy.h  ClientProxyAcceptor.cpp  ClientProxyAcceptor.h  ClientProxyAceptador.cpp  ClientProxyAceptador.h  Clients.cpp  Clients.h  Constants.h  Game.cpp  Game.h  GameMonitor.cpp  GameMonitor.h  GameRunner.cpp  GameRunner.h  ListenerSocket.cpp  ListenerSocket.h  Lock.cpp  Lock.h  Map.cpp  Map.h  Server.cpp  Server.h  Servidor.cpp  Servidor.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h  main.cpp  server.ini
server/static/: level1.xml
server/static/maps/: default.xml  difficult.xml  easy.xml  last.xml  map.xml  medium.xml  mio.xml
server/static/maps/secondary/: short.xml
spikes/: CMakeLists.txt
spikes/1-gtkmm-helloworld/: CMakeLists.txt  main.cpp
spikes/10-goocanvas-moving-items/: main.cc  tp  window.cc  window.h
spikes/2-gtkmm-glade/: CMakeLists.txt  main.cpp
spikes/3-cppunit-helloworld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  HelloWorldTest.cpp  HelloWorldTest.h  main_test.cpp
spikes/4-cairomm-helloworld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  main.cpp
spikes/5-cairomm-keyboard/: CMakeLists.txt  Surface.cpp  Surface.h  examplewindow.cpp  examplewindow.h  main.cpp
spikes/6-gtkmm-css/: CMakeLists.txt  jazz.css  main.cpp
spikes/6-gtkmm-multiple-frames/: CMakeLists.txt  examplewindow.cpp  examplewindow.h  main.cpp  packbox.cpp  packbox.h
spikes/7-gtkmm-css/: CMakeLists.txt  main.cpp
spikes/8-gtkmm-combobox/: CMakeLists.txt  examplewindow.cpp  examplewindow.h
spikes/9-goocanvas/: CMakeLists.txt  demo.glade  main.cpp  page.h  primitives.cpp  primitives.h  window.cpp  window.h
spikes/gtkmm/: comando
