cmake_minimum_required(VERSION 2.6)
project(Spikes)

add_subdirectory(1-gtkmm-helloworld)
add_subdirectory(2-gtkmm-glade)
add_subdirectory(3-cppunit-helloworld)
add_subdirectory(4-cairomm-helloworld)
add_subdirectory(5-cairomm-keyboard)
add_subdirectory(6-gtkmm-multiple-frames)
add_subdirectory(7-gtkmm-css)
add_subdirectory(9-goocanvas)
add_subdirectory(10-goocanvas-moving-items)
